--- a/style/account.css
+++ b/style/account.css
@@ -78,6 +78,9 @@
 	padding: 4px 6px 4px 6px;
 	font-size: 14px;
 }
+.accButtonHighlight {
+	box-shadow: 0px 0px 16px #fdc84e;
+}
 .accEmbedContainer {
 	text-align: center;
 }
