--- a/gw2t.css
+++ b/gw2t.css
@@ -229,6 +229,7 @@ img {
 }
 .cslText {
 	width: 100%;
+	min-width: 360px;
 	height: 180px;
 }
 
@@ -630,6 +631,9 @@ html, body,
 	border-radius: 2px;
 	background: rgba(33, 32, 33, 0.9);
 	box-shadow: 0px 0px 3px #888;
+}
+.itemContextAutoWidth {
+	min-width: auto !important;
 }
 
 .itemContext li {
