--- a/style/overlay.css
+++ b/style/overlay.css
@@ -87,6 +87,10 @@
 	margin-bottom: 2px;
 	padding: 1px 2px 1px 4px;
 }
+.mapContextCompassList img {
+	width: 24px; height: 24px;
+}
+
 .tmlOpaqueNot .tmlSegment {
 	background: transparent;
 }
