Firefox hidden panel workaround, draggable event

--- a/gw2t.css
+++ b/gw2t.css
@@ -275,6 +275,10 @@ img {
 	background: none;
 	color: #ffcc77;
 }
+#qTip cite { /* Instructional text */
+	font-family: Trebuchet MS, Menomonia;
+	font-weight: normal;
+}
 
 /*
  * Item details tooltip.
