--- a/gw2t.css
+++ b/gw2t.css
@@ -1348,7 +1348,9 @@ textarea.jsCopyCode {
 }
 .dsbSaleEntry:hover .dsbDiscount {
 	display: block;
+	margin-top: 8px;
 	margin-bottom: 8px;
+	line-height: normal;
 }
 .dsbSalePriceCurrent {
 	color: white;
