Active plate menu button style

--- a/style/overlay.css
+++ b/style/overlay.css
@@ -65,7 +65,7 @@
 
 .hudPeripheral {
 	background: url("../img/background/hud.png"), linear-gradient(to bottom, #222 0%, transparent 100%);
-	border-left: 4px solid #111;
+	border-left: 4px solid rgba(0, 0, 0, 0.6);
 	border-radius: 2px;
 }
 .hudHelp {
@@ -212,7 +212,7 @@ input.mapCoordinatesName {
 	margin-top: 0px;
 }
 .plateMenuButtonActive {
-	background: rgba(255, 238, 187, 0.2);
+	background: rgba(255, 238, 187, 0.1);
 }
 #menuOptions:hover #itemLanguagePopup {
 	top: 32px;
