--- a/style/overlay.css
+++ b/style/overlay.css
@@ -68,6 +68,10 @@
 	border-left: 4px solid rgba(0, 0, 0, 0.6);
 	border-radius: 2px;
 }
+.hudPeripheralNorth {
+	top: 0; right: 0;
+	padding-top: 4px; padding-right: 12px;
+}
 .hudHelp {
 	font-size: 13px;
 }
